Change background color

--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ nav h1{
     transition: 0.5s;
 }
 .first, .self, .remor{
-    background-color: #25333bce;
+    background-color: #344769;;
     background-position: center;
     background-size: cover;
 }
