--- a/style.css
+++ b/style.css
@@ -436,6 +436,65 @@ footer .bottom{
     color: #fff;
     transition: 1s;
 }
+
+/*---------------------------------Protection ---------------------*/
+.header-protect{
+    min-height: 50vh;
+    width: 100%;
+    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(images/protection.jpg);
+    background-position: center;
+    background-size: cover;
+    text-align: center;
+    color: #fff;
+}
+.header-protect h2{
+    margin-top: 100px;
+    font-size: 60px;
+}
+/*---------------------------------Mortgages ---------------------*/
+.header-mortgage{
+    min-height: 50vh;
+    width: 100%;
+    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(images/remortgage.jpg);
+    background-position: center;
+    background-size: cover;
+    text-align: center;
+    color: #fff;
+}
+.header-mortgage h2{
+    margin-top: 100px;
+    font-size: 60px;
+}
+
+/*---------------------------------Promotions---------------------*/
+.header-promotion{
+    min-height: 50vh;
+    width: 100%;
+    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(images/protection.jpg);
+    background-position: center;
+    background-size: cover;
+    text-align: center;
+    color: #fff;
+}
+.header-promotion h2{
+    margin-top: 100px;
+    font-size: 60px;
+}
+/*---------------------------------Testimonials---------------------*/
+.header-testimonial{
+    min-height: 50vh;
+    width: 100%;
+    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(images/review-gfc38c1021_1920.jpg);
+   
+    background-position: center;
+    background-size: cover;
+    text-align: center;
+    color: #fff;
+}
+.header-testimonial h2{
+    margin-top: 100px;
+    font-size: 60px;
+}
 /*---------------------MEDIA Q--------------*/
 @media(max-width: 700px){
     .text-box h2{
