--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     font-family: 'Familjen Grotesk', sans-serif;
 }
+
 .header{
     min-height: 100vh;
     width: 100%;
@@ -141,13 +142,16 @@ nav h1{
     padding: 40px 12px;
     box-sizing: border-box;
     transition: 0.5s;
-}
-.first, .self, .remor{
     background-color: #344769;;
     background-position: center;
     background-size: cover;
 }
-/* .self{
+/*.first, .self, .remor{
+    background-color: #344769;;
+    background-position: center;
+    background-size: cover;
+}
+ .self{
     background-image: linear-gradient(rgba(4, 9, 30, 0.678), rgba(4, 9, 30, 0.438)),url(images/self.jpg);
     background-position: center;
     background-size: cover;
@@ -451,6 +455,7 @@ footer .bottom{
     margin-top: 100px;
     font-size: 60px;
 }
+
 /*---------------------------------Mortgages ---------------------*/
 .header-mortgage{
     min-height: 50vh;
@@ -465,7 +470,13 @@ footer .bottom{
     margin-top: 100px;
     font-size: 60px;
 }
-
+.mort-az {
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    padding-top: 50px;
+    
+}
 /*---------------------------------Promotions---------------------*/
 .header-promotion{
     min-height: 50vh;
