--- a/style.css
+++ b/style.css
@@ -455,7 +455,83 @@ footer .bottom{
     margin-top: 100px;
     font-size: 60px;
 }
-
+.protect-row{
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    padding-top: 50px;
+    
+}
+.life-cov {
+    width: 60%;
+    padding-top: 150px;
+    display: inline-flex;
+    justify-content: flex-start;
+    text-align: start;
+    animation: slide-up 3s;
+}
+.life-cov:hover{
+    transform: scale(1.2);
+}
+.life-cov img{
+    width: 400px;
+    filter: brightness(2) invert(1);
+    opacity: 0.2;
+}
+.life-cov h2{
+    font-size: 40px;
+    font-weight: 500;
+    color: #25333b;
+    padding-top: 50px;
+}
+.life-cov p {
+    color: #25333b;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 22px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+.protection-row{
+    width: 60%;
+    padding-top: 50px;
+    display: inline-flex;
+    text-align: start;
+    animation: slide-up 3s;
+}
+@keyframes slide-up {
+    from{
+        opacity: 0.2;
+        line-height: 500px;
+    }
+    to{
+        opacity: 1;
+        line-height: 50px;
+    }
+}
+.protection-row:hover{
+    transform: scale(1.2);
+}
+.protection-row img{
+    width: 400px;
+    filter: brightness(2) invert(1);
+    opacity: 0.2;
+    
+}
+.protection-row h2{
+    font-size: 40px;
+    font-weight: 500;
+    color: #25333b;
+    padding-top: 50px;
+}
+.protection-row p {
+    color: #25333b;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 22px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
 /*---------------------------------Mortgages ---------------------*/
 .header-mortgage{
     min-height: 50vh;
@@ -491,6 +567,7 @@ footer .bottom{
     margin-top: 100px;
     font-size: 60px;
 }
+
 /*---------------------------------Testimonials---------------------*/
 .header-testimonial{
     min-height: 50vh;
@@ -586,6 +663,12 @@ footer .bottom{
         font-size: 40px;
         font-weight: 400;
        
+    }
+    .life-cov{
+        flex-direction: column;
+    }
+    .protection-row{
+        flex-direction: column;
     }
     .team h2{
         font-size: 50px;
